--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
-    
+    <div class="wrapper">
+      <nav> 
+
+      </nav>
+
+       <main>
+            <div class="image">
+                <img src="bilder/undertale.png" alt="undertale">
+            </div>
+
+       </main>
+
+      <footer>
+
+      </footer>
+
+    </div>
 </body>
 </html>
