Fixed link color and alignment

--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 </head>
 <body>
     <div class="wrapper">
-      <nav> 
-
+        <nav> 
+            <div class="home">
+                <a href="index.html">Home</a>
+            </div>
+             <div class="characters">
+                    <a href="index.html">characters</a>
+            </div>
+            <div class="story">
+                    <a href="index.html">Story</a>
+            </div>
+            <div class="misc">
+                    <a href="index.html">Misc</a>
+            </div>
       </nav>
 
        <main>
