--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <a href="index.html">Home</a>
             </div>
              <div class="characters">
-                    <a href="index.html">characters</a>
+                    <a href="characters.html">characters</a>
             </div>
             <div class="story">
-                    <a href="index.html">Story</a>
+                    <a href="story.html">Story</a>
             </div>
             <div class="misc">
-                    <a href="index.html">Misc</a>
+                    <a href="misc.html">Misc</a>
             </div>
       </nav>
 
