--- a/misc.html
+++ b/misc.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+        <nav> 
+                <div class="home">
+                    <a href="index.html">Home</a>
+                </div>
+                 <div class="characters">
+                        <a href="characters.html">characters</a>
+                </div>
+                <div class="story">
+                        <a href="story.html">Story</a>
+                </div>
+                <div class="misc">
+                        <a href="misc.html">Misc</a>
+                </div>
+          </nav>
+ 
 </body>
 </html>
