--- a/Site/index.html
+++ b/Site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="CSS/main.css">
 
 </head>
 <body>
@@ -27,7 +27,7 @@
 
        <main>
             <div class="image">
-                <img src="bilder/undertale.png" alt="undertale">
+                <img src="IMG/undertale.png" alt="undertale">
             </div>
 
        </main>
