character layout och story text

--- a/Site/characters.html
+++ b/Site/characters.html
@@ -28,7 +28,9 @@
                     <div class="sans"></div>
                     <div class="papyrus"></div>
                     <div class="undyne"></div>
-            
+                    <div class="toriel"></div>
+                    <div class="asgore"></div>
+                    <div class="napstablook"></div>
                 </div>
     </div>
     
