--- a/Site/story.html
+++ b/Site/story.html
@@ -22,5 +22,15 @@
                         <a href="misc.html">Misc</a>
                 </div>
           </nav>
+        <div class="storybg">
+                <article>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer tempor. Nulla quis diam. Fusce
+                   aliquam vestibulum ipsum. Nullam faucibus mi quis velit. Pellentesque sapien. Nunc auctor.
+                   Pellentesque arcu. Nulla quis diam. Aliquam ante. In sem justo, commodo ut, suscipit at, pharetra
+                   vitae, orci. Nulla non arcu lacinia neque faucibus fringilla. Nulla turpis magna, cursus sit amet,
+                   suscipit a, interdum id, felis. Vivamus luctus egestas leo. Maecenas ipsum velit, consectetuer eu
+                   lobortis ut, dictum at dui.</p>
+                 </article>
+        </div>
 </body>
 </html>
