Character cards + images

--- a/Site/characters.html
+++ b/Site/characters.html
@@ -25,12 +25,25 @@
           </nav>
     <div class="cbackground">
             <div class="cboxes">
-                    <div class="sans"></div>
-                    <div class="papyrus"></div>
-                    <div class="undyne"></div>
-                    <div class="toriel"></div>
-                    <div class="asgore"></div>
-                    <div class="napstablook"></div>
+                <div class="card">
+                        <img src="IMG/Sans_sprite.jpg">
+                        <h4>Sans </h4>
+                </div>
+                <div class="card">
+                        <img src="IMG/undyne sprite.png">
+                </div>
+                <div class="card">
+                        <img src="IMG/undertale.png">
+                </div>
+                <div class="card">
+                        <img src="IMG/undertale.png">
+                </div>
+                <div class="card">
+                        <img src="IMG/undertale.png">
+                </div>
+                <div class="card">
+                        <img src="IMG/undertale.png">
+                </div>
                 </div>
     </div>
     
