Fixade enligt checklista

--- a/Site/story.html
+++ b/Site/story.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="CSS/main.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <link rel="stylesheet" href="CSS/main.css">
 </head>
+
 <body>
-        <nav> 
+        <nav>
                 <div class="home">
-                    <a href="index.html">Home</a>
+                        <a href="index.html">Home</a>
                 </div>
-                 <div class="characters">
+                <div class="characters">
                         <a href="characters.html">characters</a>
                 </div>
                 <div class="story">
@@ -21,16 +23,17 @@
                 <div class="misc">
                         <a href="misc.html">Misc</a>
                 </div>
-          </nav>
+        </nav>
         <div class="storybg">
                 <article>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer tempor. Nulla quis diam. Fusce
-                   aliquam vestibulum ipsum. Nullam faucibus mi quis velit. Pellentesque sapien. Nunc auctor.
-                   Pellentesque arcu. Nulla quis diam. Aliquam ante. In sem justo, commodo ut, suscipit at, pharetra
-                   vitae, orci. Nulla non arcu lacinia neque faucibus fringilla. Nulla turpis magna, cursus sit amet,
-                   suscipit a, interdum id, felis. Vivamus luctus egestas leo. Maecenas ipsum velit, consectetuer eu
-                   lobortis ut, dictum at dui.</p>
-                 </article>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer tempor. Nulla quis diam. Fusce
+                                aliquam vestibulum ipsum. Nullam faucibus mi quis velit. Pellentesque sapien. Nunc auctor.
+                                Pellentesque arcu. Nulla quis diam. Aliquam ante. In sem justo, commodo ut, suscipit at,
+                                pharetra vitae, orci. Nulla non arcu lacinia neque faucibus fringilla. Nulla turpis magna,
+                                cursus sit amet, suscipit a, interdum id, felis. Vivamus luctus egestas leo. Maecenas ipsum
+                                velit, consectetuer eu lobortis ut, dictum at dui.</p>
+                </article>
         </div>
 </body>
+
 </html>
