--- a/Site/characters.html
+++ b/Site/characters.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="CSS/main.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <link rel="stylesheet" href="CSS/main.css">
 </head>
+
 <body>
-    
-        <nav> 
+
+        <nav>
                 <div class="home">
-                    <a href="index.html">Home</a>
+                        <a href="index.html">Home</a>
                 </div>
-                 <div class="characters">
+                <div class="characters">
                         <a href="characters.html">characters</a>
                 </div>
                 <div class="story">
@@ -22,30 +24,31 @@
                 <div class="misc">
                         <a href="misc.html">Misc</a>
                 </div>
-          </nav>
-    <div class="cbackground">
-            <div class="cboxes">
-                <div class="card">
-                        <img src="IMG/Sans_sprite.jpg">
-                        <h4>Sans </h4>
+        </nav>
+        <div class="cbackground">
+                <div class="cboxes">
+                        <div class="card">
+                                <img src="IMG/Sans_sprite.jpg">
+                                <h4>Sans </h4>
+                        </div>
+                        <div class="card">
+                                <img src="IMG/undyne_sprite.png">
+                        </div>
+                        <div class="card">
+                                <img src="IMG/undertale.png">
+                        </div>
+                        <div class="card">
+                                <img src="IMG/undertale.png">
+                        </div>
+                        <div class="card">
+                                <img src="IMG/undertale.png">
+                        </div>
+                        <div class="card">
+                                <img src="IMG/undertale.png">
+                        </div>
                 </div>
-                <div class="card">
-                        <img src="IMG/undyne sprite.png">
-                </div>
-                <div class="card">
-                        <img src="IMG/undertale.png">
-                </div>
-                <div class="card">
-                        <img src="IMG/undertale.png">
-                </div>
-                <div class="card">
-                        <img src="IMG/undertale.png">
-                </div>
-                <div class="card">
-                        <img src="IMG/undertale.png">
-                </div>
-                </div>
-    </div>
-    
+        </div>
+
 </body>
+
 </html>
